Se realiza ajuste en archivos meta para todas las densities

--- a/app/src/main/res/values-xhdpi/sdp.xml
+++ b/app/src/main/res/values-xhdpi/sdp.xml
@@ -329,4 +329,154 @@
     <dimen name="_298sdp">298.00dp</dimen>
     <dimen name="_299sdp">299.00dp</dimen>
     <dimen name="_300sdp">300.00dp</dimen>
+    <dimen name="_301sdp">301dp</dimen>
+    <dimen name="_302sdp">302dp</dimen>
+    <dimen name="_303sdp">303dp</dimen>
+    <dimen name="_304sdp">304dp</dimen>
+    <dimen name="_305sdp">305dp</dimen>
+    <dimen name="_306sdp">306dp</dimen>
+    <dimen name="_307sdp">307dp</dimen>
+    <dimen name="_308sdp">308dp</dimen>
+    <dimen name="_309sdp">309dp</dimen>
+    <dimen name="_310sdp">310dp</dimen>
+    <dimen name="_311sdp">311dp</dimen>
+    <dimen name="_312sdp">312dp</dimen>
+    <dimen name="_313sdp">313dp</dimen>
+    <dimen name="_314sdp">314dp</dimen>
+    <dimen name="_315sdp">315dp</dimen>
+    <dimen name="_316sdp">316dp</dimen>
+    <dimen name="_317sdp">317dp</dimen>
+    <dimen name="_318sdp">318dp</dimen>
+    <dimen name="_319sdp">319dp</dimen>
+    <dimen name="_320sdp">320dp</dimen>
+    <dimen name="_321sdp">321dp</dimen>
+    <dimen name="_322sdp">322dp</dimen>
+    <dimen name="_323sdp">323dp</dimen>
+    <dimen name="_324sdp">324dp</dimen>
+    <dimen name="_325sdp">325dp</dimen>
+    <dimen name="_326sdp">326dp</dimen>
+    <dimen name="_327sdp">327dp</dimen>
+    <dimen name="_328sdp">328dp</dimen>
+    <dimen name="_329sdp">329dp</dimen>
+    <dimen name="_330sdp">330dp</dimen>
+    <dimen name="_331sdp">331dp</dimen>
+    <dimen name="_332sdp">332dp</dimen>
+    <dimen name="_333sdp">333dp</dimen>
+    <dimen name="_334sdp">334dp</dimen>
+    <dimen name="_335sdp">335dp</dimen>
+    <dimen name="_336sdp">336dp</dimen>
+    <dimen name="_337sdp">337dp</dimen>
+    <dimen name="_338sdp">338dp</dimen>
+    <dimen name="_339sdp">339dp</dimen>
+    <dimen name="_340sdp">340dp</dimen>
+    <dimen name="_341sdp">341dp</dimen>
+    <dimen name="_342sdp">342dp</dimen>
+    <dimen name="_343sdp">343dp</dimen>
+    <dimen name="_344sdp">344dp</dimen>
+    <dimen name="_345sdp">345dp</dimen>
+    <dimen name="_346sdp">346dp</dimen>
+    <dimen name="_347sdp">347dp</dimen>
+    <dimen name="_348sdp">348dp</dimen>
+    <dimen name="_349sdp">349dp</dimen>
+    <dimen name="_350sdp">350dp</dimen>
+    <dimen name="_351sdp">351dp</dimen>
+    <dimen name="_352sdp">352dp</dimen>
+    <dimen name="_353sdp">353dp</dimen>
+    <dimen name="_354sdp">354dp</dimen>
+    <dimen name="_355sdp">355dp</dimen>
+    <dimen name="_356sdp">356dp</dimen>
+    <dimen name="_357sdp">357dp</dimen>
+    <dimen name="_358sdp">358dp</dimen>
+    <dimen name="_359sdp">359dp</dimen>
+    <dimen name="_360sdp">360dp</dimen>
+    <dimen name="_361sdp">361dp</dimen>
+    <dimen name="_362sdp">362dp</dimen>
+    <dimen name="_363sdp">363dp</dimen>
+    <dimen name="_364sdp">364dp</dimen>
+    <dimen name="_365sdp">365dp</dimen>
+    <dimen name="_366sdp">366dp</dimen>
+    <dimen name="_367sdp">367dp</dimen>
+    <dimen name="_368sdp">368dp</dimen>
+    <dimen name="_369sdp">369dp</dimen>
+    <dimen name="_370sdp">370dp</dimen>
+    <dimen name="_371sdp">371dp</dimen>
+    <dimen name="_372sdp">372dp</dimen>
+    <dimen name="_373sdp">373dp</dimen>
+    <dimen name="_374sdp">374dp</dimen>
+    <dimen name="_375sdp">375dp</dimen>
+    <dimen name="_376sdp">376dp</dimen>
+    <dimen name="_377sdp">377dp</dimen>
+    <dimen name="_378sdp">378dp</dimen>
+    <dimen name="_379sdp">379dp</dimen>
+    <dimen name="_380sdp">380dp</dimen>
+    <dimen name="_381sdp">381dp</dimen>
+    <dimen name="_382sdp">382dp</dimen>
+    <dimen name="_383sdp">383dp</dimen>
+    <dimen name="_384sdp">384dp</dimen>
+    <dimen name="_385sdp">385dp</dimen>
+    <dimen name="_386sdp">386dp</dimen>
+    <dimen name="_387sdp">387dp</dimen>
+    <dimen name="_388sdp">388dp</dimen>
+    <dimen name="_389sdp">389dp</dimen>
+    <dimen name="_390sdp">390dp</dimen>
+    <dimen name="_391sdp">391dp</dimen>
+    <dimen name="_392sdp">392dp</dimen>
+    <dimen name="_393sdp">393dp</dimen>
+    <dimen name="_394sdp">394dp</dimen>
+    <dimen name="_395sdp">395dp</dimen>
+    <dimen name="_396sdp">396dp</dimen>
+    <dimen name="_397sdp">397dp</dimen>
+    <dimen name="_398sdp">398dp</dimen>
+    <dimen name="_399sdp">399dp</dimen>
+    <dimen name="_400sdp">400dp</dimen>
+    <dimen name="_401sdp">401dp</dimen>
+    <dimen name="_402sdp">402dp</dimen>
+    <dimen name="_403sdp">403dp</dimen>
+    <dimen name="_404sdp">404dp</dimen>
+    <dimen name="_405sdp">405dp</dimen>
+    <dimen name="_406sdp">406dp</dimen>
+    <dimen name="_407sdp">407dp</dimen>
+    <dimen name="_408sdp">408dp</dimen>
+    <dimen name="_409sdp">409dp</dimen>
+    <dimen name="_410sdp">410dp</dimen>
+    <dimen name="_411sdp">411dp</dimen>
+    <dimen name="_412sdp">412dp</dimen>
+    <dimen name="_413sdp">413dp</dimen>
+    <dimen name="_414sdp">414dp</dimen>
+    <dimen name="_415sdp">415dp</dimen>
+    <dimen name="_416sdp">416dp</dimen>
+    <dimen name="_417sdp">417dp</dimen>
+    <dimen name="_418sdp">418dp</dimen>
+    <dimen name="_419sdp">419dp</dimen>
+    <dimen name="_420sdp">420dp</dimen>
+    <dimen name="_421sdp">421dp</dimen>
+    <dimen name="_422sdp">422dp</dimen>
+    <dimen name="_423sdp">423dp</dimen>
+    <dimen name="_424sdp">424dp</dimen>
+    <dimen name="_425sdp">425dp</dimen>
+    <dimen name="_426sdp">426dp</dimen>
+    <dimen name="_427sdp">427dp</dimen>
+    <dimen name="_428sdp">428dp</dimen>
+    <dimen name="_429sdp">429dp</dimen>
+    <dimen name="_430sdp">430dp</dimen>
+    <dimen name="_431sdp">431dp</dimen>
+    <dimen name="_432sdp">432dp</dimen>
+    <dimen name="_433sdp">433dp</dimen>
+    <dimen name="_434sdp">434dp</dimen>
+    <dimen name="_435sdp">435dp</dimen>
+    <dimen name="_436sdp">436dp</dimen>
+    <dimen name="_437sdp">437dp</dimen>
+    <dimen name="_438sdp">438dp</dimen>
+    <dimen name="_439sdp">439dp</dimen>
+    <dimen name="_440sdp">440dp</dimen>
+    <dimen name="_441sdp">441dp</dimen>
+    <dimen name="_442sdp">442dp</dimen>
+    <dimen name="_443sdp">443dp</dimen>
+    <dimen name="_444sdp">444dp</dimen>
+    <dimen name="_445sdp">445dp</dimen>
+    <dimen name="_446sdp">446dp</dimen>
+    <dimen name="_447sdp">447dp</dimen>
+    <dimen name="_448sdp">448dp</dimen>
+    <dimen name="_449sdp">449dp</dimen>
+    <dimen name="_450sdp">450dp</dimen>
 </resources>
