--- a/app/src/main/res/values-xxhdpi/sdp.xml
+++ b/app/src/main/res/values-xxhdpi/sdp.xml
@@ -300,5 +300,155 @@
     <dimen name="_298sdp">253.3dp</dimen>
     <dimen name="_299sdp">254.15dp</dimen>
     <dimen name="_300sdp">255dp</dimen>
+    <dimen name="_301sdp">255.85dp</dimen>
+    <dimen name="_302sdp">256.7dp</dimen>
+    <dimen name="_303sdp">257.55dp</dimen>
+    <dimen name="_304sdp">258.4dp</dimen>
+    <dimen name="_305sdp">259.25dp</dimen>
+    <dimen name="_306sdp">260.1dp</dimen>
+    <dimen name="_307sdp">260.95dp</dimen>
+    <dimen name="_308sdp">261.8dp</dimen>
+    <dimen name="_309sdp">262.65dp</dimen>
+    <dimen name="_310sdp">263.5dp</dimen>
+    <dimen name="_311sdp">264.35dp</dimen>
+    <dimen name="_312sdp">265.2dp</dimen>
+    <dimen name="_313sdp">266.05dp</dimen>
+    <dimen name="_314sdp">266.9dp</dimen>
+    <dimen name="_315sdp">267.75dp</dimen>
+    <dimen name="_316sdp">268.6dp</dimen>
+    <dimen name="_317sdp">269.45dp</dimen>
+    <dimen name="_318sdp">270.3dp</dimen>
+    <dimen name="_319sdp">271.15dp</dimen>
+    <dimen name="_320sdp">272dp</dimen>
+    <dimen name="_321sdp">272.85dp</dimen>
+    <dimen name="_322sdp">273.7dp</dimen>
+    <dimen name="_323sdp">274.55dp</dimen>
+    <dimen name="_324sdp">275.4dp</dimen>
+    <dimen name="_325sdp">276.25dp</dimen>
+    <dimen name="_326sdp">277.1dp</dimen>
+    <dimen name="_327sdp">277.95dp</dimen>
+    <dimen name="_328sdp">278.8dp</dimen>
+    <dimen name="_329sdp">279.65dp</dimen>
+    <dimen name="_330sdp">280.5dp</dimen>
+    <dimen name="_331sdp">281.35dp</dimen>
+    <dimen name="_332sdp">282.2dp</dimen>
+    <dimen name="_333sdp">283.05dp</dimen>
+    <dimen name="_334sdp">283.9dp</dimen>
+    <dimen name="_335sdp">284.75dp</dimen>
+    <dimen name="_336sdp">285.6dp</dimen>
+    <dimen name="_337sdp">286.45dp</dimen>
+    <dimen name="_338sdp">287.3dp</dimen>
+    <dimen name="_339sdp">288.15dp</dimen>
+    <dimen name="_340sdp">289dp</dimen>
+    <dimen name="_341sdp">289.85dp</dimen>
+    <dimen name="_342sdp">290.7dp</dimen>
+    <dimen name="_343sdp">291.55dp</dimen>
+    <dimen name="_344sdp">292.4dp</dimen>
+    <dimen name="_345sdp">293.25dp</dimen>
+    <dimen name="_346sdp">294.1dp</dimen>
+    <dimen name="_347sdp">294.95dp</dimen>
+    <dimen name="_348sdp">295.8dp</dimen>
+    <dimen name="_349sdp">296.65dp</dimen>
+    <dimen name="_350sdp">297.5dp</dimen>
+    <dimen name="_351sdp">298.35dp</dimen>
+    <dimen name="_352sdp">299.2dp</dimen>
+    <dimen name="_353sdp">300.05dp</dimen>
+    <dimen name="_354sdp">300.9dp</dimen>
+    <dimen name="_355sdp">301.75dp</dimen>
+    <dimen name="_356sdp">302.6dp</dimen>
+    <dimen name="_357sdp">303.45dp</dimen>
+    <dimen name="_358sdp">304.3dp</dimen>
+    <dimen name="_359sdp">305.15dp</dimen>
+    <dimen name="_360sdp">306dp</dimen>
+    <dimen name="_361sdp">306.85dp</dimen>
+    <dimen name="_362sdp">307.7dp</dimen>
+    <dimen name="_363sdp">308.55dp</dimen>
+    <dimen name="_364sdp">309.4dp</dimen>
+    <dimen name="_365sdp">310.25dp</dimen>
+    <dimen name="_366sdp">311.1dp</dimen>
+    <dimen name="_367sdp">311.95dp</dimen>
+    <dimen name="_368sdp">312.8dp</dimen>
+    <dimen name="_369sdp">313.65dp</dimen>
+    <dimen name="_370sdp">314.5dp</dimen>
+    <dimen name="_371sdp">315.35dp</dimen>
+    <dimen name="_372sdp">316.2dp</dimen>
+    <dimen name="_373sdp">317.05dp</dimen>
+    <dimen name="_374sdp">317.9dp</dimen>
+    <dimen name="_375sdp">318.75dp</dimen>
+    <dimen name="_376sdp">319.6dp</dimen>
+    <dimen name="_377sdp">320.45dp</dimen>
+    <dimen name="_378sdp">321.3dp</dimen>
+    <dimen name="_379sdp">322.15dp</dimen>
+    <dimen name="_380sdp">323dp</dimen>
+    <dimen name="_381sdp">323.85dp</dimen>
+    <dimen name="_382sdp">324.7dp</dimen>
+    <dimen name="_383sdp">325.55dp</dimen>
+    <dimen name="_384sdp">326.4dp</dimen>
+    <dimen name="_385sdp">327.25dp</dimen>
+    <dimen name="_386sdp">328.1dp</dimen>
+    <dimen name="_387sdp">328.95dp</dimen>
+    <dimen name="_388sdp">329.8dp</dimen>
+    <dimen name="_389sdp">330.65dp</dimen>
+    <dimen name="_390sdp">331.5dp</dimen>
+    <dimen name="_391sdp">332.35dp</dimen>
+    <dimen name="_392sdp">333.2dp</dimen>
+    <dimen name="_393sdp">334.05dp</dimen>
+    <dimen name="_394sdp">334.9dp</dimen>
+    <dimen name="_395sdp">335.75dp</dimen>
+    <dimen name="_396sdp">336.6dp</dimen>
+    <dimen name="_397sdp">337.45dp</dimen>
+    <dimen name="_398sdp">338.3dp</dimen>
+    <dimen name="_399sdp">339.15dp</dimen>
+    <dimen name="_400sdp">340dp</dimen>
+    <dimen name="_401sdp">340.85dp</dimen>
+    <dimen name="_402sdp">341.7dp</dimen>
+    <dimen name="_403sdp">342.55dp</dimen>
+    <dimen name="_404sdp">343.4dp</dimen>
+    <dimen name="_405sdp">344.25dp</dimen>
+    <dimen name="_406sdp">345.1dp</dimen>
+    <dimen name="_407sdp">345.95dp</dimen>
+    <dimen name="_408sdp">346.8dp</dimen>
+    <dimen name="_409sdp">347.65dp</dimen>
+    <dimen name="_410sdp">348.5dp</dimen>
+    <dimen name="_411sdp">349.35dp</dimen>
+    <dimen name="_412sdp">350.2dp</dimen>
+    <dimen name="_413sdp">351.05dp</dimen>
+    <dimen name="_414sdp">351.9dp</dimen>
+    <dimen name="_415sdp">352.75dp</dimen>
+    <dimen name="_416sdp">353.6dp</dimen>
+    <dimen name="_417sdp">354.45dp</dimen>
+    <dimen name="_418sdp">355.3dp</dimen>
+    <dimen name="_419sdp">356.15dp</dimen>
+    <dimen name="_420sdp">357dp</dimen>
+    <dimen name="_421sdp">357.85dp</dimen>
+    <dimen name="_422sdp">358.7dp</dimen>
+    <dimen name="_423sdp">359.55dp</dimen>
+    <dimen name="_424sdp">360.4dp</dimen>
+    <dimen name="_425sdp">361.25dp</dimen>
+    <dimen name="_426sdp">362.1dp</dimen>
+    <dimen name="_427sdp">362.95dp</dimen>
+    <dimen name="_428sdp">363.8dp</dimen>
+    <dimen name="_429sdp">364.65dp</dimen>
+    <dimen name="_430sdp">365.5dp</dimen>
+    <dimen name="_431sdp">366.35dp</dimen>
+    <dimen name="_432sdp">367.2dp</dimen>
+    <dimen name="_433sdp">368.05dp</dimen>
+    <dimen name="_434sdp">368.9dp</dimen>
+    <dimen name="_435sdp">369.75dp</dimen>
+    <dimen name="_436sdp">370.6dp</dimen>
+    <dimen name="_437sdp">371.45dp</dimen>
+    <dimen name="_438sdp">372.3dp</dimen>
+    <dimen name="_439sdp">373.15dp</dimen>
+    <dimen name="_440sdp">374dp</dimen>
+    <dimen name="_441sdp">374.85dp</dimen>
+    <dimen name="_442sdp">375.7dp</dimen>
+    <dimen name="_443sdp">376.55dp</dimen>
+    <dimen name="_444sdp">377.4dp</dimen>
+    <dimen name="_445sdp">378.25dp</dimen>
+    <dimen name="_446sdp">379.1dp</dimen>
+    <dimen name="_447sdp">379.95dp</dimen>
+    <dimen name="_448sdp">380.8dp</dimen>
+    <dimen name="_449sdp">381.65dp</dimen>
+    <dimen name="_450sdp">382.5dp</dimen>
 
 </resources>
