--- a/app/src/main/res/layout/cant_deposit_alert_layout.xml
+++ b/app/src/main/res/layout/cant_deposit_alert_layout.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_width="290dp"
-    android:layout_height="325dp">
+    android:layout_width="@dimen/_300sdp"
+    android:layout_height="@dimen/_360sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="290dp"
-        android:layout_height="325dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/cantDepositImageView"
