--- a/app/src/main/res/layout/incorrect_password_alert_layout.xml
+++ b/app/src/main/res/layout/incorrect_password_alert_layout.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_width="290dp"
-    android:layout_height="325dp">
+    android:layout_width="@dimen/_300sdp"
+    android:layout_height="@dimen/_365sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="290dp"
-        android:layout_height="325dp">
+        android:layout_width="@dimen/_300sdp"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/incorrectPasswordImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_110sdp"
             android:layout_marginStart="@dimen/_44sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:layout_marginEnd="@dimen/_44sdp"
@@ -72,6 +72,18 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordAttemptTextView" />
+
+        <View
+            android:id="@+id/separator1"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="@dimen/_55sdp"
+            android:layout_marginEnd="@dimen/_55sdp"
+            android:background="@color/elektra_white_gray"
+            android:layout_marginTop="@dimen/_16sdp"
+            app:layout_constraintTop_toBottomOf="@+id/acceptButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
