--- a/app/src/main/res/layout/fragment_ektp_home_profile.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_profile.xml
@@ -75,7 +75,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:text="Francisco Javier Cortes Torres"
+                    android:layout_marginStart="@dimen/_31sdp"
+                    android:layout_marginEnd="@dimen/_31sdp"
                     android:gravity="center"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
@@ -150,7 +151,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:text="(55)55555555"
                     android:gravity="center"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
@@ -175,8 +175,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginStart="@dimen/_31sdp"
+                    android:layout_marginEnd="@dimen/_31sdp"
                     android:gravity="center"
-                    android:text="fj23pk@gmail.com"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
                     app:layout_constraintEnd_toEndOf="parent"
