--- a/app/src/main/res/layout/fragment_ektp_home_notice.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_notice.xml
@@ -65,38 +65,42 @@
                     android:text="Se ha restablecido tu contraseña"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/notifi1Body"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:text="Ahora puedes accesar con tu nueva contraseña"
                     android:theme="@style/hint_edit_text"
-                    app:layout_constraintStart_toStartOf="@+id/notifi1Title"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/notifi1Title" />
 
                 <TextView
                     android:id="@+id/notifi1Date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:text="Lunes 11 de noviembre, 2021"
                     android:theme="@style/note_2"
-                    app:layout_constraintStart_toStartOf="@+id/notifi1Body"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/notifi1Body" />
 
                 <View
                     android:id="@+id/separator1"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:background="@color/elektra_white_gray"
                     android:layout_marginTop="@dimen/_16sdp"
                     app:layout_constraintTop_toBottomOf="@+id/notifi1Date"
@@ -111,20 +115,22 @@
                     android:text="Recibíste un envío de dinero"
                     android:theme="@style/appbar_title"
                     android:textColor="@color/elektra_gray"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/separator1" />
 
                 <TextView
                     android:id="@+id/recibeNoticeTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:text="Deposítalo en tu cuenta o cobralo en ventanilla de BAZ"
                     android:theme="@style/hint_edit_text"
-                    app:layout_constraintStart_toStartOf="@id/recibeTextView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recibeTextView" />
 
                 <TextView
@@ -132,9 +138,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
                     android:text="Martes 24 de octubre, 2021"
                     android:theme="@style/note_2"
-                    app:layout_constraintStart_toStartOf="@id/recibeNoticeTextView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recibeNoticeTextView" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
