layout separado de compartir detalles

--- a/app/src/main/res/navigation/receive_money_navigator.xml
+++ b/app/src/main/res/navigation/receive_money_navigator.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/receive_money_navigator"
     app:startDestination="@id/EKTPReceiveMoneyMTCNFragment">
 
@@ -34,5 +35,21 @@
     <fragment
         android:id="@+id/receiveMTCNAcountSuccesFragment"
         android:name="com.elektra.ektp.ektpreceivemoney.view.EKTPReceiveMTCNAcountSuccesFragment"
-        android:label="ReceiveMTCNAcountSuccesFragment" />
+        android:label="ReceiveMTCNAcountSuccesFragment" >
+        <action
+            android:id="@+id/action_receiveMTCNAcountSuccesFragment_to_EKTPReceiveMTCNShareImageFragment"
+            app:destination="@id/EKTPReceiveMTCNShareImageFragment" />
+        <action
+            android:id="@+id/action_receiveMTCNAcountSuccesFragment_to_EKTPReceiveMoneyMTCNFragment"
+            app:destination="@id/EKTPReceiveMoneyMTCNFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/EKTPReceiveMTCNShareImageFragment"
+        android:name="com.elektra.ektp.ektpreceivemoney.view.EKTPReceiveMTCNShareImageFragment"
+        android:label="fragment_ektp_receive_mtcn_share_image"
+        tools:layout="@layout/fragment_ektp_receive_mtcn_share_image" >
+        <action
+            android:id="@+id/action_EKTPReceiveMTCNShareImageFragment_to_EKTPReceiveMoneyMTCNFragment"
+            app:destination="@id/EKTPReceiveMoneyMTCNFragment" />
+    </fragment>
 </navigation>
