--- a/app/src/main/res/layout/fragment_ektp_home_notice.xml
+++ b/app/src/main/res/layout/fragment_ektp_home_notice.xml
@@ -46,99 +46,14 @@
             app:layout_constraintTop_toBottomOf="@id/appbar" />
         <!--aqui se debe agregar un recyclerview o scroll para las notificaciones     que se iran desplegando-->
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/_40sdp"
-            app:layout_constraintTop_toBottomOf="@+id/noticeImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/bankNoteTextView">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/notifi1Title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Se ha restablecido tu contraseña"
-                    android:theme="@style/appbar_title"
-                    android:textColor="@color/elektra_gray"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/notifi1Body"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_12sdp"
-                    android:text="Ahora puedes accesar con tu nueva contraseña"
-                    android:theme="@style/hint_edit_text"
-                    app:layout_constraintStart_toStartOf="@+id/notifi1Title"
-                    app:layout_constraintTop_toBottomOf="@+id/notifi1Title" />
-
-                <TextView
-                    android:id="@+id/notifi1Date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="lunes 11 de nov 2021"
-                    android:theme="@style/note_2"
-                    app:layout_constraintStart_toStartOf="@+id/notifi1Body"
-                    app:layout_constraintTop_toBottomOf="@+id/notifi1Body" />
-
-                <View
-                    android:id="@+id/separator1"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
-                    android:background="@color/elektra_white_gray"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    app:layout_constraintTop_toBottomOf="@+id/notifi1Date"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-                <TextView
-                    android:id="@+id/recibeTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="Recibiste un envio de dinero"
-                    android:theme="@style/appbar_title"
-                    android:textColor="@color/elektra_gray"
-                    android:layout_marginStart="@dimen/_55sdp"
-                    android:layout_marginEnd="@dimen/_55sdp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/separator1" />
-
-                <TextView
-                    android:id="@+id/recibeNoticeTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    android:text="Depositalo en tu cuenta o cobralo en \n ventanilla de BAZ"
-                    android:theme="@style/hint_edit_text"
-                    app:layout_constraintStart_toStartOf="@id/recibeTextView"
-                    app:layout_constraintTop_toBottomOf="@+id/recibeTextView" />
-
-                <TextView
-                    android:id="@+id/recibeNoticeDateTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_16sdp"
-                    android:text="Miercoles 24 de octubre, 2021"
-                    android:theme="@style/note_2"
-                    app:layout_constraintStart_toStartOf="@id/recibeNoticeTextView"
-                    app:layout_constraintTop_toBottomOf="@+id/recibeNoticeTextView" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/noticesRecyclerView"
+           android:layout_width="0dp"
+           android:layout_height="0dp"
+           app:layout_constraintTop_toBottomOf="@+id/noticeImageView"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintBottom_toTopOf="@+id/bankNoteTextView"/>
 
         <TextView
             android:id="@+id/bankNoteTextView"
