unos fixes que se perdieron en merge

--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -20,7 +20,7 @@
             android:text="Header"
             android:textSize="@dimen/_17sdp"
             android:fontFamily="@font/azo_sans_bold"
-            android:textColor="@color/black"
+            android:textColor="@color/elektra_gray"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_62sdp"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:text="body"
             android:textSize="@dimen/_12sdp"
+            android:textColor="@color/elektra_gray"
             android:fontFamily="@font/azo_sans_regular"
             android:layout_marginTop="@dimen/_6sdp"
             android:layout_marginStart="@dimen/_62sdp"
@@ -45,7 +46,7 @@
             android:text="date"
             android:textSize="@dimen/_10sdp"
             android:fontFamily="@font/azo_sans_bold"
-            android:textColor="@color/black"
+            android:textColor="@color/elektra_gray"
             android:layout_marginTop="@dimen/_30sdp"
             android:layout_marginStart="@dimen/_62sdp"
             app:layout_constraintTop_toBottomOf="@+id/noticeBodyTextView"
