--- a/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
+++ b/app/src/main/res/layout/fragment_ektp_receive_mtcn_share_image.xml
@@ -257,6 +257,8 @@
                     android:layout_marginTop="@dimen/_45sdp"
                     android:layout_marginStart="@dimen/_66sdp"
                     android:layout_marginEnd="@dimen/_66sdp"
+                    android:text="@string/share_details_button"
+                    android:theme="@style/bottom_button"
                     app:layout_constraintTop_toBottomOf="@+id/stDetailCardView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
